# Franka-Emika-Controller---ROS2

./: CMakeLists.txt  franka_script.lua  log_q.txt  package.xml
lib/: CMakeLists.txt
lib/include/control/: control.h
lib/include/kinematic_model/: kinematic_model.h
lib/include/trajectory_generation/: trajectory_generation.h
lib/src/control/: control.cpp
lib/src/kinematic_model/: kinematic_model.cpp
lib/src/trajectory_generation/: trajectory_generation.cpp
src/: controller_node.cpp
